--- a/Social/groups/templates/groups/group_list.html
+++ b/Social/groups/templates/groups/group_list.html
@@ -12,7 +12,7 @@
   <p>Welcome to the Groups Page</p>
   </div>
   {% if user.is_authenticated %}
-  <a href="{% url 'groups:create' class='btn btn-md btn-fill btn-warning' %}">
+  <a href="{% url 'groups:create' class='btn btn-md btn-fill btn-danger' %}">
     <span class='glyphicon glyphicon-plus-sign'> Create New Group! </span>
   </a>
     {% endif %}
