--- a/Social/templates/base.html
+++ b/Social/templates/base.html
@@ -31,12 +31,12 @@
         </div>
         <div class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="#" class="btn btn-simple">Post</a>
-            <a class="nav-item nav-link" href="#" class="btn btn-simple">Groups</a>
-            <a class="nav-item nav-link" href="#" class="btn btn-simple">Create Group</a>
+            <a class="nav-item nav-link" href="{% url 'posts:create' %}" class="btn btn-simple">Post</a>
+            <a class="nav-item nav-link" href="{% url 'groups:all' %}" class="btn btn-simple">Groups</a>
+            <a class="nav-item nav-link" href="{% url 'groups:create' %}" class="btn btn-simple">Create Group</a>
             <a class="nav-item nav-link" href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a>
           {% else %}
-            <a class="nav-item nav-link" href="#"class="btn btn-simple">Groups</a>
+            <a class="nav-item nav-link" href="{% url 'groups:all' %}"class="btn btn-simple">Groups</a>
             <a class="nav-item nav-link" href="{% url 'accounts:login' %}" class="btn btn-simple">Log in</a>
             <a class="nav-item nav-link" href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a>
           {% endif %}
